2003-09-04 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* configure.ac: pumped up atlas version req to 0.5
	* ServerService: added support for character creation
	* DimeOgre: bound key "5" to character creation
	* plugins.cfg: re-added this file
	* TODO: added todo list

2003-08-26 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* configure.ac: pumped up eris version to eris-1.2 
	(Eris 0.9.8)

2003-06-23 Miguel Guzman <aglanor [at] telefonica [dot] net>
        * Cal3DConverter: converts Cal3D materials to Ogre
        materials, and assigns material and texture mapping
	to the Ogre mesh accordingly.

2003-05-10 James Turner <james at worldforge dot org>
	* Allow the prefix where Cal3d is installed to too
	be specific via a --with-cal3d= argument to configure.
	* Verify the existence of cal3d.h and the Cal3d lib
	in configure.

2003-05-09 James Turner <james at worldforge dot org>
	* Overhaul configure.ac to be totally pkg-config
	based, to work with the current stable release of all
	the WorldForge libs.
	* Remove all the copied AM_PATH_xxxx macros from
	acinlude.m4, since they are no longer necessary.

2003-05-05 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* Cal3DConverter: converts cal3d meshes to ogre meshes,
	without material, textures or animations yet. Does the 
	appropiate Atlas->Ogre rotation on the mesh.

2003-04-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* DimeOgre.h/cpp: added a Water Plane at height 0.
	There is also a little ogre head marking (0,0,0).
	The more detailed the scene, the easiest it is
	to spot strange behaviors.
	And it looks cool :)

2003-04-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* MathConverter.h: Point, Vector and Quaternion converter
	for world-centric coordinates (Atlas-wfmath like)
	to/from screen-centric coordinates (Ogre like).
	See file for more info.
	Only point conversion currently, more will come later.
	* Cal3DOgreConverter.h/cpp: model converter.